[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/otros/Actividad.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/otros/Puerta.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Torre.gd" type="Script" id=3]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=4]
[ext_resource path="res://sprites/d_particula_amarilla.png" type="Texture" id=5]
[ext_resource path="res://sounds/a_poner.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 40.1995

[sub_resource type="CircleShape2D" id=2]
radius = 120.337

[node name="Torre" type="Node2D" groups=["bodega", "ediTorre", "ediffice", "explotable", "porton", "robable"]]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Vigia" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Vigia"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Bala1" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -6, -17 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bala2" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 8, -11 )
rotation = -0.441568
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bala3" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -8, -2 )
rotation = -0.219911
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bala4" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( 5, 3 )
rotation = -2.97579
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 4 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Guardia" type="Node2D" parent="Imagen" groups=["interior"]]
position = Vector2( 5, -97 )
__meta__ = {
"_edit_lock_": true
}

[node name="Actividad" parent="Imagen" instance=ExtResource( 1 )]

[node name="Fin" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="Fin"]
position = Vector2( -18, -15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin2" type="Node2D" parent="Fin"]
position = Vector2( -28, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin3" type="Node2D" parent="Fin"]
position = Vector2( 27, 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin4" type="Node2D" parent="Fin"]
position = Vector2( 16, -13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Puerta" parent="." instance=ExtResource( 2 )]
position = Vector2( -33, 34 )

[node name="Ray" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[node name="Soldado" type="Timer" parent="."]
one_shot = true

[node name="SPoner" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 6 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="Vigia" to="." method="_on_Vigia_area_entered"]
[connection signal="area_exited" from="Vigia" to="." method="_on_Vigia_area_exited"]
[connection signal="toggled" from="Imagen/Actividad" to="." method="_on_Actividad_toggled"]
[connection signal="timeout" from="Soldado" to="." method="_on_Soldado_timeout"]
